// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Находится в залоге: LegalPledge_locked 1`] = `
Array [
  Object {
    "backgroundColor": "ffffff",
    "backgroundColorDark": "1c1c1e",
    "backgroundColorID": 17,
    "cornerRadius": "{24, 24, 0, 0}",
    "flex": 1,
    "height": 24,
    "id": "pledge",
    "name": "stack",
  },
  Object {
    "backgroundColor": "ffffff",
    "backgroundColorDark": "1c1c1e",
    "backgroundColorID": 17,
    "children": Array [
      Object {
        "fontSize": 27,
        "fontWeight": "bold",
        "lineHeight": 33,
        "name": "text",
        "text": "Информация о залогах",
        "textColor": "000000",
        "textColorDark": "ffffff",
        "textColorID": 21,
      },
      Object {
        "fontSize": 13,
        "margin": "{4, 0, 0, 0}",
        "name": "text",
        "text": "Обновлено 24 февраля 2022",
        "textColor": "7f000000",
        "textColorDark": "7fffffff",
        "textColorID": 4,
      },
    ],
    "flexDirection": "column",
    "name": "stack",
    "padding": "{0, 16, 8, 16}",
  },
  Object {
    "alignItems": "center",
    "backgroundColor": "ffffff",
    "backgroundColorDark": "1c1c1e",
    "backgroundColorID": 17,
    "children": Array [
      Object {
        "aspectRatio": 1,
        "contentMode": "scaleAspectFit",
        "height": 24,
        "margin": "{0, 0, 0, 10}",
        "name": "image",
        "tintColor": "f54b42",
        "tintColorDark": "f54b42",
        "tintColorID": 2,
        "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/ios/warning-outline-ios.png",
      },
      Object {
        "children": Array [
          Object {
            "flex": 1,
            "fontSize": 17,
            "name": "text",
            "text": "Автомобиль находится в залоге",
            "textColor": "000000",
            "textColorDark": "ffffff",
            "textColorID": 21,
          },
        ],
        "flex": 1,
        "flexDirection": "column",
        "name": "stack",
      },
    ],
    "minHeight": 56,
    "name": "stack",
    "padding": "{0, 16, 0, 16}",
  },
  Object {
    "backgroundColor": "ffffff",
    "backgroundColorDark": "1c1c1e",
    "backgroundColorID": 17,
    "children": Array [
      Object {
        "backgroundColor": "19000000",
        "backgroundColorDark": "19ffffff",
        "backgroundColorID": 24,
        "flex": 1,
        "height": 1,
        "margin": "{16, 0, 16, 0}",
        "name": "stack",
      },
      Object {
        "fontSize": 13,
        "name": "text",
        "text": "По данным Реестра уведомлений о залоге движимого имущества и Национального бюро кредитных историй",
        "textColor": "7f000000",
        "textColorDark": "7fffffff",
        "textColorID": 4,
      },
    ],
    "flexDirection": "column",
    "name": "stack",
    "padding": "{0, 16, 0, 16}",
  },
  Object {
    "backgroundColor": "ffffff",
    "backgroundColorDark": "1c1c1e",
    "backgroundColorID": 17,
    "cornerRadius": "{0, 0, 24, 24}",
    "flex": 1,
    "height": 24,
    "name": "stack",
  },
  Object {
    "backgroundColor": "f2f2f7",
    "backgroundColorDark": "000000",
    "backgroundColorID": 18,
    "height": 16,
    "name": "stack",
  },
]
`;

exports[`Старая логика: LegalPledge_paid 1`] = `
Array [
  Object {
    "backgroundColor": "ffffff",
    "backgroundColorDark": "1c1c1e",
    "backgroundColorID": 17,
    "cornerRadius": "{24, 24, 0, 0}",
    "flex": 1,
    "height": 24,
    "id": "pledge",
    "name": "stack",
  },
  Object {
    "backgroundColor": "ffffff",
    "backgroundColorDark": "1c1c1e",
    "backgroundColorID": 17,
    "children": Array [
      Object {
        "fontSize": 27,
        "fontWeight": "bold",
        "lineHeight": 33,
        "name": "text",
        "text": "Информация о залогах",
        "textColor": "000000",
        "textColorDark": "ffffff",
        "textColorID": 21,
      },
      Object {
        "fontSize": 13,
        "margin": "{4, 0, 0, 0}",
        "name": "text",
        "text": "Обновлено 24 февраля 2022",
        "textColor": "7f000000",
        "textColorDark": "7fffffff",
        "textColorID": 4,
      },
    ],
    "flexDirection": "column",
    "name": "stack",
    "padding": "{0, 16, 8, 16}",
  },
  Object {
    "alignItems": "center",
    "backgroundColor": "ffffff",
    "backgroundColorDark": "1c1c1e",
    "backgroundColorID": 17,
    "children": Array [
      Object {
        "aspectRatio": 1,
        "contentMode": "scaleAspectFit",
        "height": 24,
        "margin": "{0, 0, 0, 10}",
        "name": "image",
        "tintColor": "36b555",
        "tintColorDark": "36b555",
        "tintColorID": 1,
        "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/ios/check-ios.png",
      },
      Object {
        "children": Array [
          Object {
            "flex": 1,
            "fontSize": 17,
            "name": "text",
            "text": "Сведения о нахождении в залоге не обнаружены",
            "textColor": "000000",
            "textColorDark": "ffffff",
            "textColorID": 21,
          },
        ],
        "flex": 1,
        "flexDirection": "column",
        "name": "stack",
      },
    ],
    "minHeight": 56,
    "name": "stack",
    "padding": "{0, 16, 0, 16}",
  },
  Object {
    "backgroundColor": "ffffff",
    "backgroundColorDark": "1c1c1e",
    "backgroundColorID": 17,
    "children": Array [
      Object {
        "backgroundColor": "19000000",
        "backgroundColorDark": "19ffffff",
        "backgroundColorID": 24,
        "flex": 1,
        "height": 1,
        "margin": "{16, 0, 16, 0}",
        "name": "stack",
      },
      Object {
        "fontSize": 13,
        "name": "text",
        "text": "По данным Реестра уведомлений о залоге движимого имущества и Национального бюро кредитных историй",
        "textColor": "7f000000",
        "textColorDark": "7fffffff",
        "textColorID": 4,
      },
    ],
    "flexDirection": "column",
    "name": "stack",
    "padding": "{0, 16, 0, 16}",
  },
  Object {
    "backgroundColor": "ffffff",
    "backgroundColorDark": "1c1c1e",
    "backgroundColorID": 17,
    "cornerRadius": "{0, 0, 24, 24}",
    "flex": 1,
    "height": 24,
    "name": "stack",
  },
  Object {
    "backgroundColor": "f2f2f7",
    "backgroundColorDark": "000000",
    "backgroundColorID": 18,
    "height": 16,
    "name": "stack",
  },
]
`;
